# DeepAgentRAG

./: .env.example  .gitignore  AGENTS.md  plan.md  plan_v2.md  pyproject.toml  readme.md
deeprag_coder/: __init__.py
deeprag_coder/agent/: deep_agent.py  factory.py  permissions.py  profiles.py  prompts.py  subagents.py
deeprag_coder/cli/: main.py
deeprag_coder/config/: loader.py  schema.json  settings.py
deeprag_coder/memory/: project_context.py
deeprag_coder/rag/: context_assembler.py  pipeline.py
deeprag_coder/rag/chunker/: ast_parser.py  semantic_chunker.py
deeprag_coder/rag/embedder/: code_embedder.py
deeprag_coder/rag/knowledge_graph/: builder.py  querier.py
deeprag_coder/rag/retriever/: hybrid_retriever.py  reranker.py
deeprag_coder/rag/vector_store/: base.py  chroma_store.py
deeprag_coder/skills/bug-hunt/: SKILL.md
deeprag_coder/skills/bug-hunt/references/: common-patterns.md
deeprag_coder/skills/code-review/: SKILL.md
deeprag_coder/skills/code-review/references/: code-style.md  security.md
deeprag_coder/skills/doc-gen/: SKILL.md
deeprag_coder/skills/doc-gen/references/: style-guide.md  templates.md
deeprag_coder/skills/refactor/: SKILL.md
deeprag_coder/skills/refactor/references/: dependency-analysis.md  strategy.md
deeprag_coder/tools/: code_analyze.py  doc_generate.py  graph_query.py  lsp_tool.py  rag_ask.py  rag_search.py
deeprag_coder/utils/: repo_map.py
tests/: test_ast_parser.py  test_context_assembler.py  test_retriever.py  test_semantic_chunker.py  test_tools.py
